# rdex

./: CLAUDE.md  Cargo.toml  README.md
docs/: 01-overview.md  02-architecture.md  03-thompson-sampling.md  04-adaptive-parameters.md  05-pattern-recognition.md  06-backtest-engine.md  07-portfolio-and-risk.md  08-validation.md  09-transfer-learning.md  10-indicators.md
docs/plans/: 2026-02-28-vector-pattern-learning-design.md  2026-02-28-vector-pattern-learning-impl.md
src/: lib.rs  main.rs
src/backtest/: engine.rs  mod.rs  portfolio.rs  validation.rs
src/data/: cache.rs  fetcher.rs  mod.rs
src/domain/: crypto_domain.rs  indicators.rs  mod.rs  types.rs
src/engine/: adaptive.rs  learner.rs  mod.rs  pattern_library.rs  strategy.rs  thompson.rs  trade_manager.rs  transfer.rs
src/evaluation/: metrics.rs  mod.rs  scorer.rs
src/strategy/: features.rs  mod.rs  patterns.rs
