[package]
name = "rdex"
version = "0.1.0"
edition = "2021"
description = "Real-time self-learning crypto trading system using cross-domain transfer learning"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Math / statistics
rand = "0.8"
statrs = "0.17"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV for data caching
csv = "1.3"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[[bin]]
name = "rdex"
path = "src/main.rs"

[[bin]]
name = "rdex-backtest"
path = "src/bin/backtest.rs"

[profile.release]
opt-level = 3
lto = true
